montagem cards pagina criações

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
                     <div class="separator"></div>
 
-                    <p>Os doces finos são estrelas das festas mais formais, o complemento perfeito para ocasiões especiais.  </p>
+                    <p>Os doces finos são estrelas das festas mais 
+                    o complemento perfeito para ocasiões especiais.</p>
 
                     <a href="doces-finos-detalhe.html">SAIBA MAIS</a>
 
@@ -584,7 +585,7 @@
                                     <li><a target="_blank" href="http://www.faceboo.com/marcelopatisserie"><i class="fa fa-facebook fa-lg"></i></a></li>
                                     <li><a target="_blank" href="http://www.instragram.com/marceloribeiropatisserie"><i class="fa fa-instagram fa-lg"></i></a></li>
                                     <li><a target="_blank" href="https://www.youtube.com/channel/UCIgioizyqeFVUvfxgKnxxvg"><i class="fa fa-youtube fa-lg"></i></a></li>
-
+                                    <li><a target="_blank" href="https://twitter.com/Marcelo03624940?lang=pt"><i class="fa fa-twitter fa-lg"></i></a></li>
                                 </ul>
                             </div>
                         </div>
