--- a/bolosconfeitados-detalhe.1.html
+++ b/bolosconfeitados-detalhe.1.html
@@ -406,7 +406,7 @@
                                         class="fa fa-instagram fa-lg"></i></a></li>
                             <li><a target="_blank" href="https://www.youtube.com/channel/UCIgioizyqeFVUvfxgKnxxvg"><i
                                         class="fa fa-youtube fa-lg"></i></a></li>
-
+                                        <li><a target="_blank" href="https://twitter.com/Marcelo03624940?lang=pt"><i class="fa fa-twitter fa-lg"></i></a></li>
                         </ul>
                     </div>
                 </div>
