--- a/contato.html
+++ b/contato.html
@@ -229,7 +229,7 @@
                                     <li><a target="_blank" href="http://www.faceboo.com/marcelopatisserie"><i class="fa fa-facebook fa-lg"></i></a></li>
                                     <li><a target="_blank" href="http://www.instragram.com/marceloribeiropatisserie"><i class="fa fa-instagram fa-lg"></i></a></li>
                                     <li><a target="_blank" href="https://www.youtube.com/channel/UCIgioizyqeFVUvfxgKnxxvg"><i class="fa fa-youtube fa-lg"></i></a></li>
-
+                                    <li><a target="_blank" href="https://twitter.com/Marcelo03624940?lang=pt"><i class="fa fa-twitter fa-lg"></i></a></li>
                                 </ul>
                             </div>
                         </div>
