--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="testimonial-author-photo">
                         <div class="vertical-line"></div>
                         <div class="img-frame">
-                            <span><img class="img-circle wp-post-image"  src="images/temp-images/gravatar.png" alt="Image"></span>
+                            <span><img class="img-circle wp-post-image"  src="images/temp-images/bia_patisserie.jpg" alt="Image"></span>
                         </div>
                     </div>
                     <blockquote class="testimonial-text">
