--- a/produtos.html
+++ b/produtos.html
@@ -108,7 +108,7 @@
 </div>
 <!-- End of Header Wrapper -->
 
-<div class="page-banner" style="background-repeat: no-repeat; background-position: center top; background-image: url('images/loja.jpg'); background-size: cover;">
+<div class="page-banner" style="background-repeat: no-repeat; background-position: center top; background-image: url('images/temp-images/prancheta-1-copiar.png'); background-size: cover;">
     <div class="container fadeInLeft ">
         <h2 class="page-title" id="lojaBanner">Loja</h2>
     </div>
