--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
 </div>
 <!-- End of Header Wrapper -->
 
-<div class="page-banner" style="background-repeat: no-repeat; background-position: center top; background-image: url('images/blog.png'); background-size: cover;">
+<div class="page-banner" style="background-repeat: no-repeat; background-position: center top; background-image: url('images/temp-images/doces.jpg'); background-size: cover;">
     <div class="container fadeInLeft ">
         <h2 class="page-title">Blog</h2>
     </div>
