alteracao banner home

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="flexslider loading">
         <ul class="slides">
             <li>
-                <img src="images/docesfinos.jpg" alt="Apostila Doces Finos"/>
+                <img src="images/temp-images/banner_home_1900x800_apostila_docesfinos.jpg" alt="Apostila Doces Finos"/>
 
                 <div class="slide-description container ">
 
