--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
 
                     <div class="separator"></div>
 
-                    <p>Os doces finos são estrelas das festas mais 
-                    o complemento perfeito para ocasiões especiais.</p>
+                    <p>Aprenda com essa apostila a fazer doces maravilhosos.</p>
 
                     <a href="doces-finos-detalhe.html">SAIBA MAIS</a>
 
