--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                     <div class="separator"></div>
 
-                    <p>Aprenda com essa apostila a fazer doces maravilhosos.</p>
+                   
 
                     <a href="doces-finos-detalhe.html">SAIBA MAIS</a>
 
@@ -134,9 +134,9 @@
 
                     <div class="separator"></div>
 
-                    <p>Nessa apostila, aprenda como fazer bolos deliciosos (massas, recheios e coberturas).</p>
+                    
 
-                    <a href="#any-link-can-go-here">SAIBA MAIS</a>
+                    <a href="bolosconfeitados-detalhe.1.html">SAIBA MAIS</a>
 
                 </div>
             </li>
@@ -475,7 +475,7 @@
                 <div class="item col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <article class="blog-post clearfix format-image has-post-thumbnail hentry category-health tag-biscuit tag-cup tag-table post_format-post-format-image">
                         <figure>
-                            <a href="image-post-format.html" title="Torta Mousse Maracujá">
+                            <a href="post2.html" title="Torta Mousse Maracujá">
                                 <img src="images/posts/tortamoussemaracuja/tortamoussemaracuja.jpg" alt="Home BLog Img">
                             </a>
                         </figure>
@@ -497,7 +497,7 @@
                 <div class="item col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <article class="blog-post clearfix format-image has-post-thumbnail hentry category-health tag-biscuit tag-cup tag-table post_format-post-format-image">
                         <figure>
-                            <a href="image-post-format.html" title="Quindim de Framboesa">
+                            <a href="post3.html" title="Quindim de Framboesa">
                                 <img src="images/posts/quindimdeframboesa/quindimdeframboesa.jpg" alt="Home BLog Img">
                             </a>
                         </figure>
